@@ -1,5 +1,6 @@
 26 October 2007
 
+* (nicm) unlink-window command.
 * (nicm) link-window command to link an existing window into another session
   (or another index in the same session). Syntax:
 
@@ -175,5 +176,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.53 2007-10-26 13:03:59 nicm Exp $
+$Id: CHANGES,v 1.54 2007-10-26 16:57:32 nicm Exp $
 
